maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:66: error: Unit does not take parameters
    fonceAuNord()
               ^